added app, bugs with ListView and Image

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,10 +7,22 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <TextView
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/toolbarMain"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:title="Магазин"
+        app:titleTextColor="@color/white"
+        android:background="@color/mediumPurple"
+        tools:ignore="MissingConstraints" />
+
+    <Button
+        android:id="@+id/createShopListProductBTN"
+        android:backgroundTint="@color/mediumPurple"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
+        android:textSize="24dp"
+        android:text="@string/create_list_product_button"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
