--- a/app/src/main/res/layout/activity_shop_list_product.xml
+++ b/app/src/main/res/layout/activity_shop_list_product.xml
@@ -79,9 +79,9 @@
     <ListView
         android:id="@+id/listViewLV"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="12dp"
+        android:layout_height="0dp"
         app:layout_constraintTop_toBottomOf="@+id/saveBTN"
+        app:layout_constraintBottom_toBottomOf="parent"
         tools:listitem="@layout/list_item" />
 
 
